# ykdzy

./: .gitignore  CMakeLists.txt  EasyXPng.cpp  EasyXPng.hpp  assets.cpp  assets.hpp  craft_table.cpp  craft_table.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  log.cpp  log.hpp  log.txt  main.cpp  map.cpp  map.hpp  map.json  music.hpp  render.cpp  render.hpp  resource.h  startwindow.cpp  startwindow.hpp  structure.cpp  structure.hpp
assets/blocks/: blockconfig.json
assets/entity/: entity_config.json
assets/items/: itemconfig.json
assets/player/: playerconfig.json  run.py
include/: cJSON.h
mods/: mods.json
mods/testmod/: CMakeLists.txt  build.bat  buildmingw.bat  map.hpp  readme.md  testmod.cpp  testmod.json
mods/tree_gen/: tree_gen.json
save1/: .player  00000.player  chunk-33686019.chunk  chunk0.chunk  game.json  game1.json  map.json
saves/134/: game.json
saves/4234234/: game.json
saves/45435/: game.json
saves/run1/: game.json
saves/rwer/: game.json
